[package]
name = "esp_lorawan_nostd"
version = "0.1.0"
authors = ["Konrad Moesch <konrad@moesch.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor    = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-futures     = "0.1.1"
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync        = "0.6.0"
embassy-time        = "0.3.2"
esp-backtrace = { version = "0.13.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = ["esp32s3", "embedded-hal", "async"] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32s3", "integrated-timers"] }
esp-hal-procmacros = { version = "0.12.0", features = ["embassy"] }
esp-println = { version = "0.10.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
lora-phy = { version = "3.0.1", features = ["lorawan-radio"] }
lorawan-device = { version = "0.12.2", features = ["embassy-time", "default-crypto"] }
static_cell = "2.1.0"
[profile.dev]
# Rust debug is too slow.e
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
